initialized mongodb and data schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cSpell.words": ["fname", "lname", "Proshop"]
+  "cSpell.words": [
+    "Airpods",
+    "alexa",
+    "DSLR",
+    "Espina",
+    "fname",
+    "LIGHTSYNC",
+    "lname",
+    "MERN",
+    "Proshop",
+    "transformative",
+    "wirelessly"
+  ]
 }
