added error handling middleware

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
   "cSpell.words": [
     "Airpods",
     "alexa",
+    "chatgpt",
+    "chtgpt",
     "DSLR",
     "Espina",
+    "Findby",
     "fname",
     "LIGHTSYNC",
     "lname",
