setup redux store and created constant reducer actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
     "LIGHTSYNC",
     "lname",
     "MERN",
+    "Productscreen",
     "Proshop",
+    "reduxjs",
     "transformative",
     "wirelessly"
   ]
